[package]
name = "tomler"
version = "0.1.0"
edition = "2021"
authors = ["subnero1"]
description = "A simple lightweight TOML get/set tool"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/subnero1/tomler"
repository = "https://github.com/subnero1/tomler"
keywords = ["toml", "cli", "config", "get", "set"]
categories = ["command-line-utilities", "config"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
